<resources>
    <string name="app_name">BancoDeDados_SQLite</string>
    <string name="txtCadastroCliente">Cadastro Cliente</string>
    <string name="txtNome">Nome</string>
    <string name="txtCódigo">Código</string>
    <string name="txtFone">Fone</string>
    <string name="txtEmail">Email</string>

    <string name="txtBtnInserir">Inserir</string>
    <string name="txtBtnVoltar">Voltar</string>

</resources>